[package]
authors = ["Some dude"]
build = "build.rs"
categories = ["command-line-utilities"]
description = "Something"
keywords = ["ls"]
license = "Apache-2.0"
name = "something"
readme = "./README.md"
repository = "https://github.com/meain/test"
version = "0.14.0"
edition = "2018"

[[bin]]
name = "something"
path = "src/main.rs"

[build-dependencies]

[dependencies]
tempdir = "0.3.7"
serde = { version = "~1.0",  features = ["derive"] }

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "2.32.0"

[dev-dependencies]

[features]
sudo = []
