[package]
authors = ["Some dude"]
build = "build.rs"
categories = ["command-line-utilities"]
description = "Something"
keywords = ["ls"]
license = "Apache-2.0"
name = "something"
readme = "./README.md"
repository = "https://github.com/meain/test"
version = "0.14.0"
edition = "2018"

[[bin]]
name = "something"
path = "src/main.rs"

[build-dependencies]
clap = "2.32.0"
version_check = "0.1.3"

[dependencies]
tar = '0.4.5'
ansi_term = "0.11.0"
libc = "0.2.44"
serde = { version = "~1.0",  features = ["derive"] }
users = "0.8.0"
lscolors = "0.5.0"

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "2.32.0"

[dev-dependencies]
tempdir = "0.3.7"

[features]
sudo = []
