[tool.poetry]
name = "example"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4"

guessit = ">=3.0.0"
tvdb-api = ">=2.0"
imdbpy = ">=6.6"
musicbrainzngs = ">=0.6"

[tool.poetry.dev-dependencies]
"flake8" = ">=3.5.0"
pylint = {version = ">=2.1.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
