[tool.poetry]
name = "example"
version = "0.0.1"
authors = [
    "Abin Simon <abinsimon10@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4"

guessit = ">=3.0.0"
tvdb-api = ">=2.0"
imdbpy = ">=6.6"
musicbrainzngs = ">=0.6"

[tool.poetry.dev-dependencies]
"flake8" = {version = ">=3.5.0"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
